# bookverse

./: alembic.ini  pyproject.toml  pytest.ini
app/: config.py  database.py  dependencies.py  exceptions.py  main.py  utils.py
app/api/v1/: auth.py  book.py  exception_handler.py  favorite.py  review.py
app/dto/: book.py
app/models/: __init__.py  book.py  favorite.py  review.py  user.py
app/repository/: book.py  favorite.py  review.py  user.py
app/schemas/: auth.py  book.py  favorite.py  response.py  review.py  user.py
app/service/: book.py  favorite.py  review.py  user.py
migrations/: env.py
migrations/versions/: 2026_06_25_2340-a83c08cb9c5b_initial_migration.py  2026_06_29_2052-f6f87b93dc8f_initial_migration.py  2026_07_01_1531-928765e95077_add_composite_index_to_reviews.py  2026_07_01_1542-05656389f892_add_indexes_to_books_and_favorites.py
tests/: conftest.py
tests/test_api/test_auth/: conftest.py  test_delete_user.py  test_get_user_profile.py  test_login_user.py  test_register_user.py  test_update_user.py  test_update_user_password.py
tests/test_api/test_book/: conftest.py  test_add_book.py  test_delete_book.py  test_get_books.py  test_get_detail_book.py  test_update_book.py
tests/test_api/test_favorite/: conftest.py  test_add_favorite.py  test_delete_favorite.py  test_get_all_favorites.py
tests/test_api/test_review/: conftest.py  test_add_review.py  test_delete_review.py  test_get_book_reviews.py  test_update_review.py
