[project]
name = "bookverse"
version = "0.1.0"
description = ""
authors = [
    {name = "pavgor",email = "blackflager@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy[postgresql] (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "uuid-utils (>=0.16.2,<0.17.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ASYNC", "PT", "RUF"]
ignore = ["E501", "RUF003", "RUF002", "RUF001"]  
unfixable = ["F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"